implemented the nucleo-bom for better dependency management